test/libsolidity/syntaxTests/more_than_256_declarationerrors.sol
contract C {
  function f() {
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
  }
}
// ----
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// DeclarationError: Undeclared identifier.
// Warning: There are more than 256 errors. Aborting.
